完成点击切换当前歌曲

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
         <service
             android:name=".service.PlayService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+        <service
+            android:name=".PlayService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
