完成下一曲上一曲功能的实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             android:name=".PlayService"
             android:enabled="true"
             android:exported="true" />
+
+        <activity android:name=".PlayDetail2Activity"></activity>
     </application>
 
 </manifest>
