--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.ksblletba.orangemusic">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -31,6 +32,7 @@
             android:exported="true" />
 
         <activity android:name=".PlayDetail2Activity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
