--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/musicico"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/musicico"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -26,12 +26,7 @@
             android:name=".service.PlayService"
             android:enabled="true"
             android:exported="true" />
-        <service
-            android:name=".PlayService"
-            android:enabled="true"
-            android:exported="true" />
 
-        <activity android:name=".PlayDetail2Activity" />
         <activity android:name=".SearchActivity"></activity>
     </application>
 
