--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'com.android.support:palette-v7:26.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support:support-annotations:26.1.0'
-    compile("com.github.hotchemi:permissionsdispatcher:3.1.0") {
+    implementation("com.github.hotchemi:permissionsdispatcher:3.1.0") {
 
         exclude module: "support-v13"
     }
