完成歌单及其音乐的播放

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
             android:name=".service.PlayService"
             android:enabled="true"
             android:exported="true" />
-        <activity android:name=".SearchActivity"></activity>
+
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".PlayListActivity"></activity>
     </application>
 
 </manifest>
